--- a/index.html
+++ b/index.html
@@ -1,76 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>AL-Safa Café Menu</title>
         <link href="styles.css" rel="stylesheet" type="text/css" />
     </head>
-    <body>
+    <body dir="rtl">
         <div class="menu">
             <header>
                 <h1>AL-Safa Café</h1>
-                <p class="established">Est. 2022</p>
+                <p class="established">منذ عام 2022</p>
             </header>
             <hr />
             <main>
                 <section>
-                    <h2>Coffee</h2>
+                    <h2>قهوة</h2>
                     <img
                         src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg"
                         alt="coffee icon"
                     />
                     <article class="item">
-                        <p class="flavor">French Vanilla</p>
-                        <p class="price">3.00$</p>
+                        <p class="flavor">فانيلا فرنسية</p>
+                        <p class="price">1000 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="flavor">Caramel Macchiato</p>
-                        <p class="price">3.75$</p>
+                        <p class="flavor">كبشتينوو بالكراميل</p>
+                        <p class="price">1250 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="flavor">Pumpkin Spice</p>
-                        <p class="price">3.50$</p>
+                        <p class="flavor">يقطين بالفلفل</p>
+                        <p class="price">1250 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="flavor">Hazelnut</p>
-                        <p class="price">4.00$</p>
+                        <p class="flavor">هزلنت</p>
+                        <p class="price">1500 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="flavor">Mocha</p>
-                        <p class="price">4.50$</p>
+                        <p class="flavor">موكا ( الأشهر )</p>
+                        <p class="price">2000 د.ع</p>
                     </article>
                 </section>
                 <section>
-                    <h2>Desserts</h2>
+                    <h2>حلويات</h2>
                     <img
                         src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg"
                         alt="pie icon"
                     />
                     <article class="item">
-                        <p class="dessert">Donut</p>
-                        <p class="price">1.50$</p>
+                        <p class="dessert">دونت</p>
+                        <p class="price">500 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="dessert">Cherry Pie</p>
-                        <p class="price">2.75$</p>
+                        <p class="dessert">فطيرة الكرز</p>
+                        <p class="price">2500 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="dessert">Cheesecake</p>
-                        <p class="price">3.00$</p>
+                        <p class="dessert">شيز كيك</p>
+                        <p class="price">2000 د.ع</p>
                     </article>
                     <article class="item">
-                        <p class="dessert">Cinnamon Roll</p>
-                        <p class="price">2.50$</p>
+                        <p class="dessert">سينمون رول</p>
+                        <p class="price">1500 د.ع</p>
                     </article>
                 </section>
             </main>
             <hr class="bottom-line" />
             <footer>
                 <p>
-                    <a href="https://google.com" target="_blank">Visit our website</a>
+                    <a href="https://google.com" target="_blank">للمزيد قوموا بزيارة موقعنا</a>
                 </p>
-                <p class="address">Iraq - Erbil - 44001</p>
+                <p class="address">العراق - أربيل - 44001</p>
             </footer>
         </div>
     </body>
